--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -164,6 +164,8 @@ a, p, h1, h2, h3, h4, h5, h6, span {
         font-weight: 700;
         margin-bottom: 5px; }
       .cards .ones_card .text .comment {
+        max-height: 100px;
+        overflow: hidden;
         font-size: 16px;
         font-weight: 350; }
 
@@ -269,13 +271,15 @@ a, p, h1, h2, h3, h4, h5, h6, span {
       margin: 0 auto; }
 
 .lost_cards {
+  padding-bottom: 50px;
   padding-top: 25px;
   margin-left: 0 !important;
   margin-right: 0 !important; }
   .lost_cards .lost_cards_animal {
     border-radius: 0 0 15px 15px;
     padding: 0px !important;
-    margin-right: 0px; }
+    margin-right: 0px;
+    color: #115175; }
     .lost_cards .lost_cards_animal .img {
       position: relative;
       z-index: 1; }
@@ -297,7 +301,10 @@ a, p, h1, h2, h3, h4, h5, h6, span {
         bottom: 0; }
       .lost_cards .lost_cards_animal .img img {
         height: 250px;
-        object-fit: contain; }
+        object-fit: cover; }
+    .lost_cards .lost_cards_animal .text {
+      max-height: 144px;
+      overflow: hidden; }
   .lost_cards .lost_cards_animal:hover {
     box-shadow: 0px 0px 10px black; }
     .lost_cards .lost_cards_animal:hover img {
@@ -336,6 +343,8 @@ a, p, h1, h2, h3, h4, h5, h6, span {
     border-radius: 0 5px 5px 5px;
     width: 100%;
     margin-bottom: 10px; }
+    .hotReports .hotReport-line div img, .hotReports .Report_animals-line div img, .Report_animals .hotReport-line div img, .Report_animals .Report_animals-line div img {
+      width: 100%; }
 
 .helpPage-video:hover {
   z-index: 10; }
@@ -447,19 +456,34 @@ a, p, h1, h2, h3, h4, h5, h6, span {
     background-color: white; }
 
 .form-new-lost-animal {
-  width: 25%;
+  width: 600px;
   margin: 0 auto;
   padding: 10px;
   border-radius: 10px;
   border: 2px solid #85addc;
-  text-align: center; }
+  text-align: center;
+  background-color: white;
+  margin-bottom: 50px; }
   .form-new-lost-animal form {
     display: flex;
     flex-direction: column;
-    width: 70%;
+    width: 75%;
     margin: 0 auto; }
+    .form-new-lost-animal form label {
+      font-size: 20px;
+      color: #115175; }
+    .form-new-lost-animal form input {
+      height: 35px;
+      border: 1px;
+      box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
+      border-radius: 15px;
+      margin-bottom: 10px;
+      background-color: white;
+      padding: 2px 6px; }
     .form-new-lost-animal form li {
       list-style-type: none; }
+    .form-new-lost-animal form button {
+      background-color: #85addc; }
 
 .login-title {
   font-size: 64px;
@@ -479,6 +503,7 @@ a, p, h1, h2, h3, h4, h5, h6, span {
     z-index: 3;
     position: relative; }
   .login .login-card .main-card {
+    overflow-y: auto;
     position: relative;
     z-index: 1;
     width: 90%;
@@ -498,6 +523,33 @@ a, p, h1, h2, h3, h4, h5, h6, span {
         font-size: 20px;
         color: #115175;
         line-height: 20px; }
+    .login .login-card .main-card .want-take-animal {
+      cursor: pointer;
+      position: relative; }
+      .login .login-card .main-card .want-take-animal span {
+        display: none;
+        position: absolute;
+        width: max-content;
+        padding: 5px;
+        background-color: white;
+        border: 1px solid #85addc;
+        border-radius: 5px;
+        font-size: 16px;
+        top: -20px;
+        left: 10px; }
+    .login .login-card .main-card .want-take-animal:hover span {
+      display: block; }
+  .login .login-card .main-card::-webkit-scrollbar {
+    background-color: #f9f9fd;
+    width: 5px;
+    padding-bottom: 20px; }
+  .login .login-card .main-card::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color: #115175; }
+  .login .login-card .main-card::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+    background-color: #f9f9fd; }
 
 #id_choices_type_card li {
   list-style-type: none; }
@@ -576,6 +628,8 @@ a, p, h1, h2, h3, h4, h5, h6, span {
     border-radius: 10px;
     box-shadow: inset 0px 0px 5px black;
     position: relative; }
+    .all_cards .all_card h2 {
+      color: #115175; }
     .all_cards .all_card .main-info {
       display: flex; }
       .all_cards .all_card .main-info p {
