--- a/static/css/styles.scss
+++ b/static/css/styles.scss
@@ -236,6 +236,8 @@ a, p, h1, h2, h3, h4, h5, h6, span{
             }
 
             .comment{
+                max-height: 100px;
+                overflow: hidden;
                 font-size: $first_font_size;
                 font-weight: 350;
             }
@@ -376,6 +378,7 @@ a, p, h1, h2, h3, h4, h5, h6, span{
 }
 
 .lost_cards{
+    padding-bottom: 50px;
     padding-top: 25px;
     margin-left: 0 !important; 
     margin-right: 0 !important;
@@ -384,6 +387,7 @@ a, p, h1, h2, h3, h4, h5, h6, span{
         border-radius: 0 0 15px 15px;
         padding: 0px !important;
         margin-right: 0px;
+        color: $secondary_color;
 
         .img{
             position: relative;
@@ -411,8 +415,13 @@ a, p, h1, h2, h3, h4, h5, h6, span{
 
             img{
                 height: 250px;
-                object-fit: contain;
+                object-fit: cover;
             }
+        }
+
+        .text{
+            max-height: 144px;
+            overflow: hidden;
         }
     }
 
@@ -468,6 +477,12 @@ a, p, h1, h2, h3, h4, h5, h6, span{
         border-radius: 0 5px 5px 5px;
         width: 100%;
         margin-bottom: 10px;
+
+        div{
+            img{
+                width: 100%;
+            }
+        }
     }
 }
 
@@ -629,22 +644,44 @@ a, p, h1, h2, h3, h4, h5, h6, span{
 }
 
 .form-new-lost-animal{
-    width: 25%;
+    width: 600px;
     margin: 0 auto;
     padding: 10px;
     border-radius: 10px;
     border: 2px solid $main_color;
     text-align: center;
+    background-color: white;
+    margin-bottom: 50px;
+    
 
     form{
         display: flex;
         flex-direction: column;
-        width: 70%;
+        width: 75%;
         margin: 0 auto;
+
+        label{
+            font-size: $second_font_size;
+            color: $secondary_color;
+        }
+
+        input{
+            height: 35px;
+            border: 1px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
+            border-radius: 15px;
+            margin-bottom: 10px;
+            background-color: white;
+            padding: 2px 6px;
+        }
 
         li{
             list-style-type: none    
-        }        
+        }    
+        
+        button{
+            background-color: $main_color;
+        }
     }
 }
 
@@ -675,6 +712,7 @@ a, p, h1, h2, h3, h4, h5, h6, span{
         }
 
         .main-card{
+            overflow-y: auto;
             position: relative;
             z-index: 1;
             width: 90%;
@@ -698,6 +736,47 @@ a, p, h1, h2, h3, h4, h5, h6, span{
                     line-height: 20px;
                 }                
             }
+
+            .want-take-animal{
+                cursor: pointer;
+                position: relative;
+
+                span{
+                    display: none;
+                    position: absolute;
+                    width: max-content;
+                    padding: 5px;
+                    background-color: white;
+                    border: 1px solid $main_color;
+                    border-radius: 5px;
+                    font-size: $first_font_size;
+                    top: -20px;
+                    left: 10px;
+                }
+            }
+
+            .want-take-animal:hover{
+                span{
+                    display: block;
+                }
+            }
+        }
+
+        .main-card::-webkit-scrollbar {
+            background-color: #f9f9fd;
+            width: 5px;
+            padding-bottom: 20px;
+        }
+        
+        .main-card::-webkit-scrollbar-thumb {
+            border-radius: 10px;
+            background-color: $secondary_color;
+        }
+        
+        .main-card::-webkit-scrollbar-track {
+            -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.2);
+            border-radius: 10px;
+            background-color: #f9f9fd;
         }
     }
 }
@@ -819,6 +898,10 @@ a, p, h1, h2, h3, h4, h5, h6, span{
         border-radius: 10px;
         box-shadow: inset 0px 0px 5px black;
         position: relative;
+
+        h2{
+            color: $secondary_color;
+        }
 
         .main-info{
             display: flex;
