--- a/templates/about.html
+++ b/templates/about.html
@@ -1,16 +1,72 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="container-fluid background-images p-5">
-    <p>Уважаемые друзья, наш проект «Лапку и Сердце» имеет амбициозные цели и с вашей помощью мы бы хотели объединить все существующие приюты для безнадзорных животный в единое сообщество которое будет комплексно оказывать взаимную поддержку, обмениваться опытом, и в первую очередь обеспечивать животных надлежащими условиями содержания помогая им обрести свой дом. Если вы готовы стать участником проекта мы искренне будем рады видеть вас среди наших друзей<br>
-        Наши цели:<br>
-        <ol>
-            <li>Создание площадки федерального уровня, которая будет консолидировать и объединять все приюты безнадзорных животных, а также оказывать им комплексную финансовую поддержку;</li>
-            <li></li>
-        </ol>
-        •	 <br>
-        •	Создание единого сервиса по поиску пропавших домашних животных для удобства поиска и широкого охвата аудитории при поиске пропавших животных<br>
-        •	Формирование сообщества граждан и организаций, которые заинтересованы в содействии решения проблем с безнадзорными животными и готовы консолидироваться с целью привлечения административной поддержки, корректировки и контроля законодательных актов посредством общественных инициатив.<br>
+<div class="container-fluid background-images p-5 about">
+    <p>Уважаемые друзья, наш проект «Лапку и Сердце» имеет амбициозные цели и с вашей помощью мы бы хотели объединить все существующие приюты для безнадзорных животный в единое сообщество которое будет комплексно оказывать взаимную поддержку, обмениваться опытом, и в первую очередь обеспечивать животных надлежащими условиями содержания помогая им обрести свой дом. Если вы готовы стать участником проекта мы искренне будем рады видеть вас среди наших друзей    </p>
+    <span>Наши цели:</span><br>
+    <ul>
+        <li>Создание площадки федерального уровня, которая будет консолидировать и объединять все приюты безнадзорных животных, а также оказывать им комплексную финансовую поддержку;</li>
+        <li>Создание единого сервиса по поиску пропавших домашних животных для удобства поиска и широкого охвата аудитории при поиске пропавших животных</li>
+        <li>Формирование сообщества граждан и организаций, которые заинтересованы в содействии решения проблем с безнадзорными животными и готовы консолидироваться с целью привлечения административной поддержки, корректировки и контроля законодательных актов посредством общественных инициатив.</li>
+    </ul>
+    <br>
+    <span>Мы хотим:</span>
+    <ol> 
+        <li>Решить проблему безнадзорных животный в Российской Федерации.</li>
+        <li>Привести к единому стандарту условия содержания безнадзорных животных, не «на бумаге» а в реальности, путем привлечения общественного финансирования от граждан и юридических лиц.</li>
+        <li>Обеспечить административную и общественную поддержку приютам для животных.</li>
+        <li>Обеспечить финансирование приютов для создания комфортных условий проживания животных.</li>
+        <li>Популяризировать культуру ответственного обращения с животными.</li>
+        <li>Снизить негативное влияние безнадзорных животных на социальную среду. </li>
+        <li>Выработать общественные инициативы и предложения с целью внесения изменений в региональное и Федеральное законодательство посредством общественных инициатив.</li>
+    </ol>
+    <p>Наши реквизиты:</p>
+    <p>
+        <span>Название организации:</span>
+        АВТОНОМНАЯ НЕКОММЕРЧЕСКАЯ
+        ОРГАНИЗАЦИЯ ПО ОКАЗАНИЮ СОЦИАЛЬНОЙ
+        ПОДДЕРЖКИ НАСЕЛЕНИЮ "ЭЛИЗИУМ"
+    </p>
+    <p>
+        <span>Юридический адрес организации:</span>
+        Российская Федерация, 630033, НОВОСИБИРСКАЯ
+        ОБЛ, Г НОВОСИБИРСК, УЛ МИРА, 62/6, оф 206        
+    </p>
+    <p>
+        <span>ИНН:</span>
+        5403072952
+    </p>
+    <p>
+        <span>КПП:</span>
+        540301001
+    </p>
+    <p>
+        <span>Расчетный счет:</span>
+        40703810900000728678
+    </p>
+    <p>
+        <span>ОГРН:</span>
+        1225400039402
+    </p>
+    <p>
+        <span>Банк:</span>
+        АО «Тинькофф Банк»
+    </p>
+    <p>
+        <span>БИК банка:</span>
+        044525974
+    </p>
+    <p>
+        <span>ИНН банка:</span>
+        7710140679
+    </p>
+    <p>
+        <span>Корреспондентский счет банка:</span>
+        30101810145250000974
+    </p>
+    <p>
+        <span>Юридический адрес банка:</span>
+        127287, г. Москва, ул. Хуторская 2-я, д. 38А, стр. 26
     </p>
 </div>
 {% endblock %}
