--- a/templates/volunteers.html
+++ b/templates/volunteers.html
@@ -1,7 +1,24 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="container-fluid" style="height: 400px">
-    
+<div class="container-fluid background-images p-5 about">
+    <p>
+        Если у Вас есть время, идеи, конструктивные предложения, Вы владеете любой квалификацией которая может помочь проекту в развитии и продвижении , либо помочь приюту в его функционировании (постройка будки, замена электропроводки, покраска забора и т.п.) непосредственно находящемуся в вашем населенном пункте, мы будем рады вашей помощи в любом виде в зависимости от текущей необходимости.
+    </p>
+    <p>
+        По вопросам, связанным с вашей возможной поддержкой, просим писать нам в почту <a href="mailto:info@elysium2022.ru" class="button">info@elysium2022.ru</a>, с указанием ваших контактных данных, и населенного пункта в которым вы проживаете.
+    </p>
+    <p>
+        Также присоединяйтесь к нашему Телеграм каналу <a href="https://t.me/+qH6nzKqptyNkYTEy">https://t.me/+qH6nzKqptyNkYTEy</a> и общайтесь с единомышленниками.
+    </p>
+    <p>
+        Если Вы сможете сделать «репост» ссылки нашего сайта среди Ваших друзей и знакомых, разместить пост в социальных сетях или написать несколько писем спонсорам для привлечения поддержки,  это уже большая помощь проекту за которую мы Вам искренне благодарны, а если Вы готовы приехать в приют, помыть миски, покрасить будки, поиграть с животными и помочь в их социальной адаптации или подобрать им новый дом, то Вы – ГЕРОЙ!
+    </p>
+    <p>
+        Наши питомцы будут ценить Вас как самого дорого и близкого человека!
+    </p>
+    <p>
+        Со своей стороны мы можем гарантировать Вам заряд положительных эмоций , +100500 очков к карме, отличную компанию и чувства которые не купишь ни за какие деньги.
+    </p>
 </div>
 {% endblock %}
