change name to username

--- a/templates/login.html
+++ b/templates/login.html
@@ -17,7 +17,7 @@
               </a>
             </div>
             <div class="main-card">
-              <p><span>Имя</span> - {{shelter.name}}</p>
+              <p><span>Имя</span> - {{shelter.username}}</p>
               <p><span>Город и адрес</span> - {{shelter.city}} {{shelter.address}}</p>
               <p><span>Описание</span> - {{shelter.about}}</p>
               <p><span>Имя директора</span> - {{shelter.director_name}}</p>
