fix name support

--- a/templates/support.html
+++ b/templates/support.html
@@ -11,7 +11,7 @@
             </button>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                 {% for shelter in shelterAll %}
-                    <li><a class="dropdown-item" href="#" id={{shelter.id}}_shelter>{{shelter.name}}</a></li>
+                    <li><a class="dropdown-item" href="#" id={{shelter.id}}_shelter>{{shelter.username}}</a></li>
                 {% endfor %}
             </ul>
         </div>
